src/test/deca/syntax/invalid/21_floatlarge.ass
	TSTO #1
	BOV stack_overflow_error
	ADDSP #1
; start main program
; Main program
; Beginning of main instructions:
	LOAD #0x1.913c44p125, R2	; loading 6.666667E37 into memory
	STORE R2, 1(GB)	; Initializing the variable a and loading it into memory
	HALT
stack_overflow_error:
	WSTR "Error: stack_overflow_error"
	WNL
	ERROR
; end main program
